# syscall_intercept_strace

./: CMakeLists.txt  config.h.in  strace.c  strace.cpp  strace_impl.c
cmake/: FindSyscallIntercept.cmake
